fix layout issue on Windows

--- a/src/EmojiWeatherMap.css
+++ b/src/EmojiWeatherMap.css
@@ -1,4 +1,5 @@
 .EmojiWeatherMap {
+    font-family: Arial;
     padding: 25px;
     margin: auto;
     text-align: left;
@@ -8,11 +9,13 @@
 }
 
 .emoji {
-    /* display: inline-block; */
+    width: 40pt;
+    height: 40pt;
 }
 
 .offset-space {
-    /* display: inline-block; */
+    width: 7pt;
+    height: 40pt;
 }
 
 .emoji-loading{
@@ -20,7 +23,6 @@
     width: 40pt;
     height: 40pt;
 }
-
 
 @media (max-width: 768px) { 
 
